changed some colors and fixed calendar z-index.

--- a/style/mainWindow/components/_calendar.scss
+++ b/style/mainWindow/components/_calendar.scss
@@ -3,6 +3,7 @@
     width: 100%;
     top: 14.3%;
     height: 85.7%;
+    z-index: 100;
     background-color: white;
 
     & .__main-container {
@@ -50,12 +51,12 @@
 
                 & .__curr-day-mark {
                     position: absolute;
-                    left: 4px;
-                    font-size: 0.5em;
+                    bottom: 3px;
+                    font-size: 0.4em;
                     border: none;
 
                     &::after {
-                        content: "➼";
+                        content: "✵";
                     }
                 }
 
