--- a/style/mainWindow/components/_schedule.scss
+++ b/style/mainWindow/components/_schedule.scss
@@ -40,7 +40,7 @@
         }
 
         & .completed {
-            border: 1px solid $light-green-1;       
+            border: 1px solid $medium-blue-4;      
         }
      
 
